imagenes para el menu vertical y tarjetas 3D

--- a/voltear_tarjetas_3d/css/style.css
+++ b/voltear_tarjetas_3d/css/style.css
@@ -7,6 +7,9 @@ body {
 .cards {
     display: flex;
     gap: 5px;
+    align-items: center;
+    justify-content: center;
+    margin: 100px 0;
 }
 
 .cards .flip-card {
